Fix parsing errors and layout issues

--- a/css/main.css
+++ b/css/main.css
@@ -84,11 +84,16 @@ article ol {
   }
 
   article {
-    padding-top: : 1.4rem;
+    padding-top: 1.4rem;
   }
 
   article > p:last-child {
     padding-bottom: 1.4rem;
+  }
+
+  blockquote {
+    margin-left: auto;
+    margin-right: auto;
   }
 
 }
